# my-playground

./: .editorconfig  .gitignore  Home.py  README.md  pyproject.toml
db/: pets.db
libs/loaders/: dart_document_loader.py
notebooks/: dart_document_loader.py  dart_report_to_md_file.ipynb  opendart.ipynb  rag_basic.ipynb  test.ipynb
pages/: 01_First_Page.py  01_Prompt_Maker.py  02_Traning_Dart_Prompt.py  03_Sample.py
prompts/: stock.text
