[tool.poetry]
name = "my-playground"
version = "0.1.0"
description = ""
authors = ["vinirooo <vinirooo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
nbformat = "^5.10.4"
plotly = "^5.23.0"
openai = "^1.37.1"
langchain = "^0.2.11"
langchain-openai = "^0.1.20"
langchain-text-splitters = "^0.2.2"
langchain-community = "^0.2.10"
langchainhub = "^0.1.20"
langsmith = "^0.1.95"
langchain-teddynote = "^0.0.18"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"
streamlit = "^1.37.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
